Complete problem9 part2